@@ -17,14 +17,14 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
-[compat]			    	# last tested with:
-julia = "1.0"			    	# 1.5.0; CUDA packages no longer compatible with < 1.3
-AutoGrad = "1.2"		    	# 1.2.3
-CUDA = "1.0"			        # 1.2.0 (GPUArrays 4.0.1)
-FileIO = "1.0"				# 1.4.0
-JLD2 = "0.1"				# 0.1.14
-NNlib = "0.6, 0.7"		 	# 0.7.3
-SpecialFunctions = "0.8, 0.9, 0.10"	# 0.10.3
+[compat]
+AutoGrad = "1.2"
+CUDA = "1.0"
+FileIO = "1.0"
+JLD2 = "0.1"
+NNlib = "0.6, 0.7"
+SpecialFunctions = "0.8, 0.9, 0.10"
+julia = "1.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
