@@ -1383,15 +1383,15 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.5.0",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.5.0"
   }
  },
  "nbformat": 4,
