@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Quick start\n",
-    "(c) Deniz Yuret, 2019\n",
+    "(c) Deniz Yuret, 2019-2020\n",
     "\n",
     "This notebook is for the impatient reader who wants to get a flavor of Julia/Knet possibly to compare it with other deep learning frameworks. In 15 lines of code and 30 seconds of GPU time we define, train, and evaluate the LeNet convolutional neural network model from scratch without any predefined layers."
    ]
@@ -16,10 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set display width, load packages, import symbols\n",
+    "# Set display width, load packages\n",
     "ENV[\"COLUMNS\"]=72\n",
-    "using Pkg; for p in (\"Knet\",\"IterTools\"); haskey(Pkg.installed(),p) || Pkg.add(p); end\n",
-    "using Knet, IterTools"
+    "using Knet, MLDatasets, IterTools"
    ]
   },
   {
@@ -62,20 +61,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Loading MNIST...\n",
-      "└ @ Main /kuacc/users/dyuret/.julia/packages/Knet/LjPts/data/mnist.jl:33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load MNIST data\n",
-    "include(Knet.dir(\"data\",\"mnist.jl\"))\n",
-    "dtrn, dtst = mnistdata();"
+    "xtrn,ytrn = MNIST.traindata(Float32)\n",
+    "xtst,ytst = MNIST.testdata(Float32)\n",
+    "dtrn = minibatch(xtrn, ytrn, 100; xtype=Knet.array_type[], xsize=(size(xtrn,1),size(xtrn,2),1,:))\n",
+    "dtst = minibatch(xtst, ytst, 100; xtype=Knet.array_type[], xsize=(size(xtst,1),size(xtst,2),1,:));"
    ]
   },
   {
@@ -87,13 +79,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "┣████████████████████┫ [100.00%, 6000/6000, 00:22/00:22, 270.20i/s] \n"
+      "┣████████████████████┫ [100.00%, 6000/6000, 00:37/00:37, 163.76i/s] \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9904"
+       "0.9900221729490022"
       ]
      },
      "execution_count": 6,
@@ -122,15 +114,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.5.0",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.5.0"
   }
  },
  "nbformat": 4,
